; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mt/extr_mt.c_stringtocomp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mt/extr_mt.c_stringtocomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compression_types = type { i32, i64 }

@comp_types = common dso_local global %struct.compression_types* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @stringtocomp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stringtocomp(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.compression_types*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @strlen(i8* %5)
  store i64 %6, i64* %4, align 8
  %7 = load %struct.compression_types*, %struct.compression_types** @comp_types, align 8
  store %struct.compression_types* %7, %struct.compression_types** %3, align 8
  br label %8

8:                                                ; preds = %23, %1
  %9 = load %struct.compression_types*, %struct.compression_types** %3, align 8
  %10 = getelementptr inbounds %struct.compression_types, %struct.compression_types* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %26

13:                                               ; preds = %8
  %14 = load %struct.compression_types*, %struct.compression_types** %3, align 8
  %15 = getelementptr inbounds %struct.compression_types, %struct.compression_types* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load i8*, i8** %2, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i64 @strncasecmp(i64 %16, i8* %17, i64 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %13
  br label %26

22:                                               ; preds = %13
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.compression_types*, %struct.compression_types** %3, align 8
  %25 = getelementptr inbounds %struct.compression_types, %struct.compression_types* %24, i32 1
  store %struct.compression_types* %25, %struct.compression_types** %3, align 8
  br label %8

26:                                               ; preds = %21, %8
  %27 = load %struct.compression_types*, %struct.compression_types** %3, align 8
  %28 = getelementptr inbounds %struct.compression_types, %struct.compression_types* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  ret i32 %29
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @strncasecmp(i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
